--- a/Plataforma de Gestão de Tarefas TaskFlow/index.html
+++ b/Plataforma de Gestão de Tarefas TaskFlow/index.html
@@ -53,6 +53,38 @@
             </div>
         </div>
     </div>
+
+    <div id="modal">
+        <div class="box">
+            <div class="head">
+                <span>Nova tarefa</span>
+                <button>X</button>
+            </div>
+
+            <div class="form">
+                <div class="form-group">
+                    <label for="descripion">descriçao</label>
+                    <textarea id="descripion" rows="3"></textarea>
+                </div>
+
+                <div class="form-group">
+                    <label for="">prioridade</label>
+                    <select id="priority">
+                        <option>baixa</option>
+                        <option>media</option>
+                        <option>alta</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label for="">prazo</label>
+                    <input type="date" id="deadline">
+                </div>
+
+                <button>salvar</button>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
