--- a/Plataforma de Gestão de Tarefas TaskFlow/index.html
+++ b/Plataforma de Gestão de Tarefas TaskFlow/index.html
@@ -62,6 +62,8 @@
             </div>
 
             <div class="form">
+                <input type="hidden" id="idInput">
+
                 <div class="form-group">
                     <label for="descript">descriçao</label>
                     <textarea id="descript" rows="3"></textarea>
