--- a/Plataforma de Gestão de Tarefas TaskFlow/index.html
+++ b/Plataforma de Gestão de Tarefas TaskFlow/index.html
@@ -9,11 +9,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="icon" href="/Plataforma de Gestão de Tarefas TaskFlow/src/foto/coffee.png" type="image/x-icon"> <!-- Adiciona o favicon -->
 </head>
 
 <body>
     <div class="header">
-        <h1>TaskFlow</h1>
+        <div class="logo-container">
+            <img src="/Plataforma de Gestão de Tarefas TaskFlow/src/foto/coffee.png" alt="Logo" class="logo"> <!-- Adiciona a logo -->
+            <h1>TaskFlow</h1>
+        </div>
         <button class="primario" onclick="abrirModal()">Nova Tarefa</button>
     </div>
 
