--- a/Plataforma de Gestão de Tarefas TaskFlow/index.html
+++ b/Plataforma de Gestão de Tarefas TaskFlow/index.html
@@ -8,7 +8,7 @@
     <title>TaskFlow</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/css/style.css">
     <link rel="icon" href="/Plataforma de Gestão de Tarefas TaskFlow/src/foto/coffee.png" type="image/x-icon">
 </head>
