--- a/Plataforma de Gestão de Tarefas TaskFlow/index.html
+++ b/Plataforma de Gestão de Tarefas TaskFlow/index.html
@@ -21,6 +21,9 @@
             <h1>TaskFlow</h1>
         </div>
         <button class="primario" onclick="abrirModal()">Nova Tarefa</button>
+        <!-- Campo de busca por prioridade -->
+        <input type="text" id="searchPriority" placeholder="Buscar por prioridade" />
+        <button class="primario" onclick="filtrarPorPrioridade(document.getElementById('searchPriority').value)">Filtrar</button>
     </div>
 
     <!-- Contêiner principal com colunas de tarefas -->
