--- a/gh.html
+++ b/gh.html
@@ -8,6 +8,19 @@
 <body>
     <li></li>
     <header></header>
+
+    <!-- Seção de Ranking -->
+    <section id="ranking">
+        <h2>Top Melhores</h2>
+        <ol>
+            <li>Usuário 1 - 150 pontos</li>
+            <li>Usuário 2 - 120 pontos</li>
+            <li>Usuário 3 - 100 pontos</li>
+            <li>Usuário 4 - 80 pontos</li>
+            <li>Usuário 5 - 60 pontos</li>
+        </ol>
+    </section>
+
     <footer></footer>
 </body>
 </html>
