--- a/gh.html
+++ b/gh.html
@@ -21,6 +21,18 @@
         </ol>
     </section>
 
+    <!-- Nova lista de ranking -->
+    <section id="contributors">
+        <h2>Top Contribuidores</h2>
+        <ul>
+            <li>Contribuidor A - 50 tarefas concluídas</li>
+            <li>Contribuidor B - 45 tarefas concluídas</li>
+            <li>Contribuidor C - 40 tarefas concluídas</li>
+            <li>Contribuidor D - 35 tarefas concluídas</li>
+            <li>Contribuidor E - 30 tarefas concluídas</li>
+        </ul>
+    </section>
+
     <footer></footer>
 </body>
 </html>
